# nfl

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  error.json  test.json
.giithub/workflows/: rust.yml
benches/: read_json.rs
frontend/: .gitignore  Dockerfile  Makefile  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/Screens/: home_page.dart  list_all_palyers.dart  players_by_name.dart  select_fields.dart  sort_players.dart  sorted_players.dart
frontend/lib/Views/: input_app.dart  nfl_scaffold.dart  players_table.dart
frontend/lib/bloc/: info_bloc.dart
frontend/lib/components/: label_checkbox.dart
frontend/lib/repository/: csv.dart  http.dart
frontend/test/: info_bloc_test.dart  widget_test.dart
src/: error.rs  lib.rs  logic.rs  main.rs  reader.rs
src/model/: error.rs  json.rs  mod.rs
src/web/: graphql_resolvers.rs  mod.rs  routes.rs
tests/: reader.rs  test.rs  web.rs
