[package]
name = "nfl-rushing"
version = "0.1.0"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.116", features = ["derive"]}
serde_derive = "1.0.116"
serde_json = "1.0.57"
rayon = "1.4.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
juniper = "0.14.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "read_json"
harness = false